--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <title>Paleta de Cores</title>
 </head>
 <body>
   <header>
-    <h1>Pixels Art</h1>
+    <h1 id='title'>Paleta de Cores</h1>
   </header>
   <main>
     <section id='options'>
-      <div id='colors'></div>
+      <div id='color-palette'>
+      </div>
       <div id='menu-options'></div>
     </section>
     <section id='content'>
