pixels ja podem ser pintados

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id='menu-options'></div>
     </section>
     <section id='content'>
-      <div id='table'></div>
+      <div id='pixel-board'></div>
     </section>
   </main>
   
