Projeto finalizado e aprovado nos testes. Falta apenas o lint

--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
     <section id='options'>
       <div id='color-palette'>
       </div>
-      <div id='menu-options'></div>
+      <div id='menu-options'>
+        <div id='menu-options-input-container'>
+          <input type="number" placeholder="ex: 5" id="board-size" min="1" step="1">
+          <button id='generate-board'>VQV</button>
+        </div>
+        <button id='clear-board'>Limpar</button>
+      </div>
     </section>
     <section id='content'>
       <div id='pixel-board'></div>
